<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie_details.MovieDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/there_is_a_network_connection_problem"
            android:visibility="gone"/>

        <ScrollView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:background="@color/grey"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayout">


                <ImageView
                    android:id="@+id/iv_movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_placeholder"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_margin="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/movie_tagline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_title"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info"
                        android:textColor="@color/black"
                        android:layout_marginTop="15dp"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/release_date"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/movie_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:textColor="@color/black"
                            android:text="@string/_2019"
                            android:textSize="12sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/rating"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/movie_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/_8"
                            android:textColor="@color/black"
                            android:textSize="12sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/runtime"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/movie_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:text="@string/_2_3_hr"
                            android:textColor="@color/black"
                            android:textSize="12sp"/>

                    </LinearLayout>


                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/overview"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/movie_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/black"
                        android:text="@string/overview"
                        android:textSize="12sp"/>

                </LinearLayout>



            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>